syntax = "proto3";

package bank_requests;

// ENUMS

enum BankRequestType {
    CREATE_ASSET = 0;
    PAYMENT = 1;
}

// REQUESTS

message CreateAssetRequest {
    uint64 dummy = 1;
}

message PaymentRequest {
    bytes receiver = 1;
    uint64 asset_id = 2;
    uint64 quantity = 3;  
}